--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/noahlotzer/react-simple-boilerplate.git"
+    "url": "https://github.com/billyhw/react"
   },
   "keywords": [
     "react",
@@ -45,7 +45,14 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "bindings": "^1.2.1",
+    "bufferutil": "^3.0.0",
+    "fs": "0.0.1-security",
+    "node-uuid": "1.4.8",
     "react": "15.2.1",
-    "react-dom": "15.2.1"
+    "react-dom": "15.2.1",
+    "utf-8-validate": "^3.0.1",
+    "uuid": "^3.0.1",
+    "ws": "^2.3.1"
   }
 }
